Fixing z-index for mobile menu

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -67,6 +67,7 @@
         top: 80px;
         left: -100%;
         opacity: 1;
+        z-index: 7;
         transition: all 0.5s ease;
     }
     .nav-menu.active {
@@ -74,7 +75,7 @@
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
-        z-index: 1;
+        z-index: 7;
     }
     .nav-links {
         text-align: center;
