--- a/src/components/pages/Communities.css
+++ b/src/components/pages/Communities.css
@@ -1,44 +1,46 @@
 * {
     box-sizing: border-box;
     font-family: 'PT Sans', sans-serif;
-  }
+}
 
-  .column {
+.column {
     float: left;
     width: 33.33%;
     padding: 10px;
-  }
-  
-  /* Clearfix (clear floats) */
-  .row::after {
+}
+
+
+/* Clearfix (clear floats) */
+
+.row::after {
     content: "";
     clear: both;
     display: table;
-  }
+}
 
-  .image-container {
+.image-container {
     position: relative;
-  }
+}
 
-  .overlay-2 {
+.overlay-2 {
     background-color: #6e77f7cc;
     opacity: 100%;
     width: 100%;
     height: 15%;
-    position: absolute;   
-    z-index: 10;
+    position: absolute;
+    z-index: 2;
     bottom: 0;
     padding-left: 10px;
     padding-top: 10px;
-  }
+}
 
-  .title {
+.title {
     font-size: 1.3vw;
     font-weight: bold;
     color: white;
-  }
+}
 
-  .subtitle {
+.subtitle {
     font-size: 1vw;
     color: white;
-  }
+}
